opa-gatekeeper/policies/images/k8s-deny-image-latest.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyimagelatest
spec:
  crd:
    spec:
      names:
        kind: K8sDenyImageLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyimagelatest

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("L'image '%s' utilise le tag ':latest' qui est interdit", [container.image])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("L'image '%s' utilise le tag ':latest' qui est interdit", [container.image])
        }
